--- a/mediawiki/.htaccess
+++ b/mediawiki/.htaccess
@@ -6,3 +6,5 @@ RewriteRule ^/?title(/.*)?$ %{DOCUMENT_ROOT}/index.php [L]
 # Redirect / to Main Page
 RewriteRule ^/*$ %{DOCUMENT_ROOT}/index.php [L]
 
+# debug
+php_flag opcache.enable Off
