--- a/template.env
+++ b/template.env
@@ -14,5 +14,5 @@ MW_DC_ENDPOINT=http://localhost/session/sso_provider
 ACME_EMAIL=acme@example.com
 # traefik domain
 TRAEFIK_HOST=traefik.wiki.example.com
-# traefik auth cretendial, generate by `htpasswd -nb username password`
+# traefik auth credential, generate by `htpasswd -nb username password`
 TRAEFIK_AUTH=admin:$apr1$y2mMX0Nx$W1.oZq9jl1dEJ3eCvSg/Z/
