--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,14 @@ services:
       - database:/var/lib/mysql
     networks:
       - backend
+  
+  memcached:
+    image: memcached
+    restart: always
+    networks:
+      - backend
+    command: 
+      - -m 128
 
   traefik:
     image: traefik:latest
