--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
       # @see https://phabricator.wikimedia.org/source/mediawiki/browse/master/includes/DefaultSettings.php
       MYSQL_DATABASE: mediawiki
       MYSQL_USER: mediawiki
-      MYSQL_PASSWORD: mediawikid
-      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      MYSQL_PASSWORD: mediawiki
+      MYSQL_ROOT_PASSWORD: mediawiki
     volumes:
       - database:/var/lib/mysql
     networks:
