--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  traefik:
+  reverse-proxy:
     environment:
       TRAEFIK_CERTIFICATESRESOLVERS_myresolver_ACME_CASERVER: https://acme-staging-v02.api.letsencrypt.org/directory
       TRAEFIK_LOG_LEVEL: DEBUG
