--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,3 +5,7 @@ services:
     environment:
       TRAEFIK_CERTIFICATESRESOLVERS_myresolver_ACME_CASERVER: https://acme-staging-v02.api.letsencrypt.org/directory
       TRAEFIK_LOG_LEVEL: DEBUG
+      TRAEFIK_API_DASHBOARD: "true"
+      TRAEFIK_API_INSECURE: "true"
+    ports: 
+      - 8080:8080
