--- a/mediawiki/dockerfile
+++ b/mediawiki/dockerfile
@@ -1,3 +1,11 @@
 FROM mediawiki:1.36
 
 RUN pecl install redis && docker-php-ext-enable redis
+
+ARG USERNAME=mediawiki
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+# Create the user
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME
