--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,9 @@ services:
     networks:
       - frontend
       - backend
-      - ipv6
+    #  - ipv6
+    extra_hosts: 
+      - ${WIKI_HOST}:host-gateway
 
   database:
     image: mariadb
