--- a/restic/dockerfile
+++ b/restic/dockerfile
@@ -1,5 +1,4 @@
 FROM lobaro/restic-backup-docker:latest
 
-# we don't need rclone and its size
-RUN apk add --no-cache alpine-conf mariadb-backup
+RUN apk add --no-cache alpine-conf mariadb-client
 RUN setup-timezone -z Asia/Shanghai
