--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       MW_INSTALL_PATH:
       WIKI_NAME:
       WIKI_HOST:
+      WIKI_PASSWORD_SENDER_EMAIL:
+      WIKI_EMERGENCY_CONTACT_EMAIL:
       WIKI_SMTP_HOST:
       WIKI_SMPT_PORT:
       WIKI_SMTP_USERNAME:
