support no auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       WIKI_EMERGENCY_CONTACT_EMAIL:
       WIKI_SMTP_HOST:
       WIKI_SMPT_PORT:
+      WIKI_SMTP_AUTH:
       WIKI_SMTP_USERNAME:
       WIKI_SMTP_PASSWORD:
       WIKI_DATABASE_HOST:
