--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       WIKI_PASSWORD_SENDER_EMAIL:
       WIKI_EMERGENCY_CONTACT_EMAIL:
       WIKI_SMTP_HOST:
-      WIKI_SMPT_PORT:
+      WIKI_SMTP_PORT:
       WIKI_SMTP_AUTH:
       WIKI_SMTP_USERNAME:
       WIKI_SMTP_PASSWORD:
