--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,9 @@ version: "3"
 
 services:
   mediawiki:
+    volumes:
+      - ./mediawiki/LocalSettings.php:${MW_INSTALL_PATH}/LocalSettings.php
+      - ./mediawiki/dev.htaccess:${MW_INSTALL_PATH}/.htaccess
     environment:
       WIKI_DEBUG: "true"
     labels:
