update default site name

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # mediawiki install path
 MW_INSTALL_PATH=/var/www/html
 # mediaiwki site name, user by $wgSitename
-WIKI_NAME=MediaWiki
+WIKI_NAME=TestWiki
 # mediawiki domain, use by $wgServer
 WIKI_HOST=wiki.localhost
 # mediawiki secret key, use by $wgSecretKey
