--- a/mediawiki/dockerfile
+++ b/mediawiki/dockerfile
@@ -27,19 +27,17 @@ RUN pecl install redis \
 
 # Install Composer
 ENV COMPOSER_ALLOW_SUPERUSER 1
-ENV COMPOSER_HOME /tmp
+ENV COMPOSER_HOME /tmp/composer
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
-# Config Composer mirror
+# Config mirror
 ARG COMPOSER_MIRROR="https://mirrors.aliyun.com/composer/"
-RUN composer config -g repo.packagist composer $COMPOSER_MIRROR
-
-# Install MediaWiki extension with Composer
-COPY ./composer.local.json $MW_INSTALL_PATH/composer.local.json
-RUN composer update --no-dev
-
-# Install MediaWiki extension without Composer
 ARG GITHUB_MIRROR="https://github.com.cnpmjs.org"
+RUN composer config -g repo.packagist composer $COMPOSER_MIRROR
+# Copy Comopser config
+COPY ./composer.local.json $MW_INSTALL_PATH/composer.local.json
+# Copy install script
 COPY ./install_extensions.sh /tmp/install_extensions.sh
+# Install extension
 RUN /tmp/install_extensions.sh
 
 
