--- a/mediawiki/dockerfile
+++ b/mediawiki/dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && apt-get install -y \
     sudo \
     libzip-dev \
     zlib1g-dev \
-    unzip
+    unzip \
+    liblua5.1-0-dev
 
 # Create user for development
 ARG USERNAME=mediawiki
@@ -22,8 +23,9 @@ RUN groupadd --gid $USER_GID $USERNAME \
 
 # Install PHP requirement
 RUN pecl install redis \
+    && pecl install luasandbox \
     && docker-php-ext-install zip \
-    && docker-php-ext-enable redis zip
+    && docker-php-ext-enable redis zip luasandbox
 
 # Install Composer
 ENV COMPOSER_ALLOW_SUPERUSER 1
