--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,11 @@ services:
       WIKI_DATABASE_NAME:
       WIKI_DATABASE_USER:
       WIKI_DATABASE_PASSWORD:
-    # maintain scritp must run with database,
-    # so we don't put it under the dockerfile
-    entrypoint: ["/entry.sh"]
-    command: apache2-foreground
+  # command: apache2-foreground
     volumes:
-      - ./mediawiki/docker-entrypoint.sh:/entry.sh
-      - ./mediawiki/maintenance:/maintenance
+      # maintenance scritp must run with database,
+      # so we don't mount it under the dockerfile
+      - ./mediawiki/maintenance:/usr/local/mwmaintenance
       # uploads
       - wiki-upload:/var/www/html/images
       # settings
