--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -53,7 +53,7 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.mailcatcher.rule: Host(`mailcatcher.localhost`)
-      traefik.http.routers.entrypoints: web
+      traefik.http.routers.mailcatcher.entrypoints: web
       traefik.http.services.mailcatcher.loadbalancer.server.port: 1080
     networks:
       smtp:
