--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,8 @@ services:
       TRAEFIK_API_INSECURE: "true"
       LEGO_CA_CERTIFICATES: /var/pebble-test-certs/pebble.minica.pem
       TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_CASERVER: https://pebble:14000/dir
+      TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_EMAIL: ${ACME_EMAIL}
+      TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_STORAGE: /etc/traefik/acme/acme.json
     volumes:
       - pebble-test-certs:/var/pebble-test-certs
     ports:
