--- a/.env.dev
+++ b/.env.dev
@@ -26,11 +26,15 @@ WIKI_DATABASE_PASSWORD=mediawiki
 # use by acme
 ACME_EMAIL=acme@example.com
 
-# restic
-RESTIC_REPOSITORY="/mnt/restic"
+TZ=Asia/Shanghai
+
+# autobackup
+RESTIC_REPOSITORY=/mnt/restic
 RESTIC_PASSWORD=mediawiki
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
-BACKUP_CRON="0 3 * * *"
-RESTIC_FORGET_ARGS= "--keep-last 30 --prune"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_DEFAULT_REGION=""
+BACKUP_CRON="*/1 * * * *"
+RESTIC_OPTIONS="--verbose"
+RESTIC_BACKUP_OPTIONS="--tag dev"
+RESTIC_FORGET_OPTIONS= "--keep-last 5 --prune"
