--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,30 +111,29 @@ services:
     networks:
       - frontend
 
-  tool-restic:
+  restic:
     profiles:
-      - backup
-    build:
-      context: ./restic
+      - autobackup
+    build: ./restic
     hostname: restic
     environment:
+      TZ:
       RESTIC_REPOSITORY:
       RESTIC_PASSWORD:
       AWS_ACCESS_KEY_ID:
       AWS_SECRET_ACCESS_KEY:
       AWS_DEFAULT_REGION:
-      RESTIC_TAG: ${RESTIC_TAG}
-      RESTIC_FORGET_ARGS: ${RESTIC_FORGET_ARGS}
-      RESTIC_JOB_ARGS: ${RESTIC_JOB_ARGS}
-      BACKUP_CRON: ${BACKUP_CRON}
-      BACKUP_DATABASE_HOST: db-mariadb
+      BACKUP_CRON: 
+      RESTIC_OPTIONS:
+      RESTIC_BACKUP_OPTIONS:
+      RESTIC_FORGET_OPTIONS:
+      BACKUP_DATABASE_HOST: ${WIKI_DATABASE_HOST}
+      BACKUP_DATABASE_NAME: ${WIKI_DATABASE_NAME}
       BACKUP_DATABASE_USER: root
       BACKUP_DATABASE_PASSWORD: ${WIKI_DATABASE_ROOT_PASSWORD}
-      BACKUP_DATABASE_NAME: ${WIKI_DATABASE_NAME}
     volumes:
       - wiki-upload:/data/upload
       - wiki-data-dump:/data/database
-      - ./restic/hooks:/hooks
     networks:
       - backend
 
